--- a/ecommerce/templates/base/base.html
+++ b/ecommerce/templates/base/base.html
@@ -1,7 +1,10 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="" href="{% static 'css/bootstrap.min.css' %}">
     <title>{% block title %}
  title
 {% endblock %}</title>
